1. Add drawer tabhost use case. 2. Fix `LinearLayout` measure error.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
     <activity android:name=".cases.ScrollHeaderActivity"
       android:theme="@style/AppTheme.NoTitleBar.TransparentStatusBar"/>
 
+    <activity android:name=".cases.DrawerTabHostActivity"
+      android:theme="@style/AppTheme.NoTitleBar.TransparentStatusBar"/>
+
   </application>
 
 </manifest>
