--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,26 @@
       </intent-filter>
     </activity>
 
-    <activity android:name=".cases.FullPageActivity"
+    <activity
+      android:name=".cases.FullPageActivity"
       android:theme="@style/AppTheme.NoTitleBar.TransparentStatusBar"/>
 
-    <activity android:name=".cases.SimpleTitleActivity"
+    <activity
+      android:name=".cases.SimpleTitleActivity"
       android:theme="@style/AppTheme.NoTitleBar.TransparentStatusBar"/>
 
-    <activity android:name=".cases.ScrollHeaderActivity"
+    <activity
+      android:name=".cases.ScrollHeaderActivity"
       android:theme="@style/AppTheme.NoTitleBar.TransparentStatusBar"/>
 
-    <activity android:name=".cases.DrawerTabHostActivity"
+    <activity
+      android:name=".cases.DrawerTabHostActivity"
       android:theme="@style/AppTheme.NoTitleBar.TransparentStatusBar"/>
+
+    <activity
+      android:name=".cases.SimpleTitleEditActivity"
+      android:theme="@style/AppTheme.NoTitleBar.TransparentStatusBar"
+      android:windowSoftInputMode="adjustResize"/>
 
   </application>
 
